--- a/vite/simulations/transformer/css/style.css
+++ b/vite/simulations/transformer/css/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 #p5Container {
   padding: 0px;
   margin-top: 60px;
